[package]
name = "rtb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
axum = "0.6.4"
ethers = { git = "https://github.com/gakonst/ethers-rs.git", features = ["eip712"], version = "1.0.2" }
eyre = "0.6.8"
mev-wallet = { version = "0.1.0", path = "../mev-wallet" }
tokio = { version = "1.25.0", features = ["macros", "rt", "time", "sync"] }
axum-macros = "0.3.2"
serde_json = "1.0.92"
serde = "1.0.152"
tracing = "0.1.37"
futures-util = "0.3.26"

[dev-dependencies]
